fix: do not run release on boilerplate

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -12,6 +12,8 @@ name: release-please
 jobs:
   release-please:
     runs-on: ubuntu-latest
+    # Do not run on template repo https://github.com/wizecore/boilerplate-saas
+    if: ${{ !contains(github.repository, 'boilerplate') }}
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
